# market-analysis

./: .env.example  .gitignore  CHANGELOG.md  DEPENDENCY_VALIDATION.md  FRONTEND_DEPENDENCIES_BRIEF.md  FRONTEND_DEPENDENCIES_VALIDATED.md  Makefile  README.md  README_TEAM_HANDOFF.md  STATUS_UPDATE_V020_DEPENDENCIES.md  TESTE_END_TO_END.md  demo_mvp.py  demo_new_metrics.py  nu_reserva_metrics_report.txt  pyproject.toml  setup_test.py  test-api.js  test-dashboard.js  test_end_to_end.py  test_smtp_only.py
.github/: ISSUE_TEMPLATE_PHASE2.md
.github/workflows/: daily-report.yml
.next/: trace  trace-build
cookbook/: API_ANALYSIS_REPORT.md  API_VIABILITY_REPORT.md  additional_api_tests.py  api_investigation.ipynb  api_investigation_fund_analysis.ipynb  api_tests.py  cvm_simple_test.py  market_analysis_architecture.drawio  simple_api_tests.py
docs/: PRD.md  README.md  _config.yml  business-requirements.md  development-status.md  efficiency-analysis.md  github-pages-config.yml  index.md  metrics.md  prd-sistema-analise-fundos.md  roadmap.md  testing-guide.md  user-stories.md  v0.2.0-architecture.drawio
frontend/: biome.json  components.json  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/v1/funds/: route.ts
frontend/src/app/api/v1/funds/[...path]/: route.ts
frontend/src/components/dashboard/: fund-selector.tsx
frontend/src/components/metrics/: performance-section.test.tsx  performance-section.tsx
frontend/src/components/ui/: __test-setup.test.ts  metric-card.test.tsx  metric-card.tsx  metrics-section.test.tsx  metrics-section.tsx
frontend/src/hooks/: useApi.ts
frontend/src/types/: api.ts  components.ts
scripts/: validate.py
sql/: schema.sql
src/market_analysis/: __main__.py  cli.py
src/market_analysis/ai/: __init__.py  cache.py  context.py  explainer.py
src/market_analysis/ai/clients/: __init__.py  anthropic.py  base.py  ollama.py
src/market_analysis/ai/templates/: __init__.py  models.py  prompt_templates.yaml  registry.py
src/market_analysis/api/: __init__.py  analysis_models.py  analysis_router.py  analysis_service.py  main.py  models.py  service.py
src/market_analysis/application/: config.py  performance.py  retry.py
src/market_analysis/domain/: __init__.py  exceptions.py  interfaces.py  models.py  schemas.py  schemas_cvm.py
src/market_analysis/domain/metrics/: __init__.py  calculator.py  formulas.py
src/market_analysis/domain/models/: __init__.py  collection.py  core.py  entities.py  fund.py  interfaces.py
src/market_analysis/infrastructure/: bcb_collector.py  benchmark_fetcher.py  cvm_collector.py  database.py  email_sender.py  news_collector.py  news_fetcher.py  pdf_generator.py  repositories.py
src/market_analysis/infrastructure/benchmarks/: __init__.py  bcb_client.py  benchmark_calculator.py  cache_manager.py  data_models.py  tesouro_client.py
src/market_analysis/infrastructure/database/: __init__.py  connection.py
src/market_analysis/infrastructure/shared/: __init__.py  http.py
tests/: test_analysis_api.py  test_api.py
tests/integration/: test_phase1_educational_metrics.py  test_phase1_pipeline.py  test_quality_validation.py  test_schema_integration.py  validate_phase1_system.py
tests/unit/: test_advanced_metrics.py  test_bcb_collector.py  test_benchmark_fetcher.py  test_benchmarks.py  test_cli_integration.py  test_cvm_collector.py  test_explainer.py  test_formulas.py  test_news_collector.py  test_pdf_generator.py  test_performance.py  test_schemas_cvm.py  test_templates.py
