[project]
name = "market-analysis"
version = "0.1.0"
description = "Automated fund analysis and reporting system"
requires-python = ">=3.11"
dependencies = [
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "aiosqlite==0.22.1",
    "httpx==0.28.1",
    "feedparser==6.0.12",
    "python-bcb==0.3.6",
    "reportlab==4.4.10",
    "matplotlib==3.10.8",
    "structlog==25.5.0",
    "apscheduler==3.11.2",
    "fastapi==0.135.3",
    "uvicorn[standard]==0.42.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==4.1.0",
    "ruff==0.7.4",
    "mypy==1.13.0",
    "black==24.10.0",
    "pre-commit==3.8.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ["py311"]
